@@ -16,8 +16,8 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import pl.edu.pw.pap.config.AppConfiguration;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -40,6 +40,8 @@ public class WebSecurityConfiguration {
                         .requestMatchers("/api/auth/login").permitAll()
                         .requestMatchers("/api/users").permitAll()
                         .requestMatchers("/api/users/verify").permitAll()
+                        .requestMatchers("/api/users/send-reset-email").permitAll()
+                        .requestMatchers("/api/users/reset-password").permitAll()
                         .requestMatchers("/api/admin/**").hasRole("ADMIN")
                         .anyRequest().authenticated()
                 );
@@ -64,11 +66,11 @@ public class WebSecurityConfiguration {
     }
 
     @Bean
-    CorsConfigurationSource corsConfigurationSource() {
+    CorsConfigurationSource corsConfigurationSource(AppConfiguration appConfiguration) {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*")); //TODO
-        configuration.setAllowedMethods(Arrays.asList("*")); //TODO
-        configuration.setAllowedHeaders(Arrays.asList("*")); //TODO
+        configuration.setAllowedOrigins(List.of(appConfiguration.getWebsiteBaseUrl()));
+        configuration.setAllowedMethods(List.of("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
